<resources>
    <string name="app_name">Learn English</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Learn English</string>
    <string name="slide_1_desc">Learn english and improve your skills!</string>

    <string name="slide_2_title">Test Your Skills</string>
    <string name="slide_2_desc">Test your english skills and share your progress!</string>

    <string name="slide_3_title">Be Graduate</string>
    <string name="slide_3_desc">Finish your courses and get your certificate!</string>

    <string name="slide_4_title">Travel The World</string>
    <string name="slide_4_desc">Travel the world and make new friends!</string>

    <string name="todo">TODO</string>

    <string name="start_app">START</string>
    <string name="statistics">STATISTICS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>

    <string name="question">QUESTION</string>
    <string name="correct">CORRECT:</string>
    <string name="percent">100/100</string>
    <string name="definition">DEFINITION</string>
    <string name="translation">TRANSLATION</string>
    <string name="id">ID</string>

    <string name="pick_your_background">Choose your background</string>
    <string name="save">SAVE</string>
    <string name="random">RANDOM</string>
    <string name="current">CURRENT</string>
    <string name="change_background">Change Background</string>
    <string name="show_intro_next_launch">Show intro next launch</string>
    <string name="back">BACK</string>
    <string name="undo">Undo</string>
    <string name="version">Version Beta 1.0</string>
    <string name="visit_out_website">Visit out website</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="watch_us_on_youtube">Watch us on Youtube</string>
    <string name="copyright">Copyright 2019 by LearEnglish</string>
    <string name="approved_info_message">Word approved info</string>
    <string name="approved_info_title">Information</string>
    <string name="approved_info_positive">OK</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="message">Message</string>
    <string name="word">Word</string>
    <string name="part_of_speech">Part Of Speech</string>
    <string name="english_word">English Word</string>
    <string name="turkish_word">Turkish Word</string>
    <string name="spanish_word">Spanish Word</string>
    <string name="favorites">Favorites</string>
    <string name="top_1000">Top 1000</string>
    <string name="top_500">Top 500</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="definitions">Definitions</string>
    <string name="examples">Examples</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="show">Show</string>
    <string name="discover">Discover</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="click_back_to_exit">Please click BACK again to exit</string>
    <string name="notification_channel">This is notification channel</string>
    <string name="liked_word">You liked this word</string>
    <string name="did_not_like_word">You did not like this word</string>
    <string name="approved_word">You approved this word</string>
    <string name="unapproved_word">You unapproved this word</string>
    <string name="none_approved_word">You none approved this word</string>
    <string name="content_not_available">Content not available</string>
    <string name="dispersion">Dispersion</string>
    <string name="frequency">Frequency</string>
    <string name="example">EXAMPLE</string>
    <string name="number_zero">0</string>
</resources>
