<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvMessage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/message"
            android:textColor="@color/colorPrimaryDark" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTitle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ico_1" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNegative"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/fab_margin"
        app:cardBackgroundColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/cvMessage"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tvNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/negative"
            android:textColor="@color/colorSecondary" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPositive"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/cvMessage"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:cardBackgroundColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/cvMessage"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/positive"
            android:textColor="@color/colorSecondary" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>