<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_base" />

    <include
        android:id="@+id/cvHeader"
        layout="@layout/header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvHeader">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_learn_english"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo">

            <TableRow android:padding="5dip">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvLearn"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_marginVertical="4dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardElevation="6dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/discover" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvFavorites"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_marginVertical="4dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardElevation="6dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/favorites" />
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow android:padding="5dip">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvTop500"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_marginVertical="4dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardElevation="6dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/top_500" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvTop1000"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_marginVertical="4dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardElevation="6dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/top_1000" />
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow android:padding="5dip">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvProgress"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_marginVertical="4dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardElevation="6dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/progress" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSettings"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    android:layout_marginVertical="4dp"
                    app:cardBackgroundColor="@color/colorYellow"
                    app:cardElevation="6dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/settings" />
                </androidx.cardview.widget.CardView>
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>