<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ChangeBGActivity">

    <include layout="@layout/activity_base" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUpSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/pick_your_background"
            android:textColor="@color/colorSecondary" />
    </androidx.cardview.widget.CardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cvSave"
        android:layout_below="@id/cvUpSide"
        android:layout_gravity="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBack"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/back"
            android:textColor="@color/colorSecondary" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRandom"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/random"
            android:textColor="@color/colorSecondary" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/archivo_black"
            android:padding="13dp"
            android:text="@string/save"
            android:textColor="@color/colorSecondary" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>